#                                               -*- Automake -*-
# -----------------------------------------------------------------------------
#
# K. Rabbertz, 28.11.2011
#
# Include documentation into distribution tarball
#
# -----------------------------------------------------------------------------
# Use GNU standards
AUTOMAKE_OPTIONS = gnu
# Only include arXiv_1109.1310 subdirectory for now
SUBDIRS = arXiv_1109.1310
