# Process this file with autoconf to produce a configure script.
AC_INIT([merger], [1.0], [thomas.kluge@desy.de])
AM_INIT_AUTOMAKE
AC_PREFIX_DEFAULT(${HOME})

# Checks for programs.
AC_PROG_CXX

# Checks for sources.
AC_CONFIG_SRCDIR([main.cc])

# Checks for libraries.

# Output
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
