#                                               -*- Automake -*-
# -----------------------------------------------------------------------------
#
# K. Rabbertz, 06.02.2009
#
# Create distribution and installation package for fastNLO v2 
#
# -----------------------------------------------------------------------------
# Use GNU standards
AUTOMAKE_OPTIONS = gnu
# Nothing to do here, just go to subdirectories
SUBDIRS = converter merger
