AUTOMAKE_OPTIONS = foreign

# the main target, i.e. the executable to build
bin_PROGRAMS = conv20

# all source files which go into the main target (and have to be distributed)
conv20_SOURCES = conv20.inc conv20.f  

# FORTRAN compiler flags to be used for the main target
AM_FFLAGS =  -O -fno-automatic -ffixed-line-length-132

