# Process this file with autoconf to produce a configure script.
AC_INIT([tableconvert], [1.0], [wobisch@fnal.gov])
AM_INIT_AUTOMAKE
AC_PREFIX_DEFAULT(${HOME})

# Checks for programs.
AC_PROG_F77

# Checks for sources.
AC_CONFIG_SRCDIR([conv20.f])

# Checks for libraries.
AC_F77_LIBRARY_LDFLAGS

# Output
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
